# mplSE3

./: CMakeLists.txt  README.md
examples/: simulate.cc
include/: camera.hpp  config.hpp  line.hpp  object.hpp  plane.hpp  point.hpp  scene.hpp  shader.hpp  sprite.hpp  sprite_plane.hpp  texture.hpp  utils.hpp
include/gl3w/: gl3w.h
include/sprite/: scube.hpp  sline.hpp  splane.hpp  spoint.hpp  sprite.hpp
shaders/: simple.fs  simple.vs
shaders/lines/: lines.fs  lines.gs  lines.vs
shaders/points/: point.fs  point.vs
src/: MotionPlanner.h  config.cc  glw3.c  line.cc  object.cc  plane.cc  planner.cpp  point.cc  scene.cc  shader.cc  sprite.cc  sprite_plane.cc  texture.cc  utils.cc
src/sprite/: scube.cc  sline.cc  splane.cc  spoint.cc  sprite.cc
tests/: simulate.cc
textures/: README.md
